# pacman-clone

./: .gitignore  CMakeLists.txt  Makefile  build.sh  run.sh
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
src/: defs.h  file_api.h  game.cpp  game.h  game_math.h  memory_api.h  pacman.cpp  platform.h  platform_game_bridge.h  platform_sdl.cpp  renderer.cpp  renderer.h  renderer_api.h  renderer_opengl.cpp  renderer_sdl.cpp  sdl_main.cpp  sdl_pacman.cpp  sdl_platform.cpp  string.cpp  types.h
src/core/: core.cpp  defs.h  math.h  string.cpp
src/game/: bitmap.cpp  freetype.cpp  game.cpp  game.h  globals.cpp
src/platform/: platform.cpp  platform.h  platform_sdl.cpp  renderer_opengl.cpp
src/profiler/: profiler.cpp  profiler.h
src/renderer/: renderer.cpp  renderer.h  renderer_opengl.cpp  renderer_opengl_render_textured_rect2.cpp
